## vX.X.X

- Added getOrCreateIndex function (#4)