@@ -78,9 +78,69 @@ class SearchTests: XCTestCase {
         self.client.search(UID: uid, searchParameters) { (result: MeiliResult) in
             switch result {
             case .success(let searchResult):
-
                 XCTAssertEqual(stubSearchResult, searchResult)
+                expectation.fulfill()
+            case .failure:
+                XCTFail("Failed to search for botman")
+            }
+        }
 
+        self.wait(for: [expectation], timeout: 1.0)
+
+    }
+
+    func testSearchForBotmanMovieFacets() {
+
+        //Prepare the mock server
+
+        let jsonString = """
+        {
+            "hits": [
+                {
+                    "id": 29751,
+                    "title": "Batman Unmasked: The Psychology of the Dark Knight",
+                    "poster": "https://image.tmdb.org/t/p/w1280/jjHu128XLARc2k4cJrblAvZe0HE.jpg",
+                    "overview": "Delve into the world of Batman and the vigilante justice tha",
+                    "release_date": "2020-04-04T19:59:49.259572Z"
+                },
+                {
+                    "id": 471474,
+                    "title": "Batman: Gotham by Gaslight",
+                    "poster": "https://image.tmdb.org/t/p/w1280/7souLi5zqQCnpZVghaXv0Wowi0y.jpg",
+                    "overview": "ve Victorian Age Gotham City, Batman begins his war on crime",
+                    "release_date": "2020-04-04T19:59:49.259572Z"
+                }
+            ],
+            "offset": 0,
+            "limit": 20,
+            "processingTimeMs": 2,
+            "query": "botman"
+        }
+        """
+
+        let decoder: JSONDecoder = JSONDecoder()
+        decoder.dateDecodingStrategy = .formatted(Formatter.iso8601)
+        let data = jsonString.data(using: .utf8)!
+        let stubSearchResult: SearchResult<Movie> = try! decoder.decode(SearchResult<Movie>.self, from: data)
+
+        session.pushData(jsonString)
+
+        // Start the test with the mocked server
+
+        let uid: String = "Movies"
+
+        let searchParameters = SearchParameters(
+            query: "botman",
+            facetFilters: [["genre:romance"], ["genre:action"]])
+
+        let expectation = XCTestExpectation(description: "Searching for botman")
+
+        typealias MeiliResult = Result<SearchResult<Movie>, Swift.Error>
+
+        self.client.search(UID: uid, searchParameters) { (result: MeiliResult) in
+            switch result {
+            case .success(let searchResult):
+                XCTAssertEqual(stubSearchResult, searchResult)
                 expectation.fulfill()
             case .failure:
                 XCTFail("Failed to search for botman")
@@ -92,7 +152,8 @@ class SearchTests: XCTestCase {
     }
 
     static var allTests = [
-        ("testSearchForBotmanMovie", testSearchForBotmanMovie)
+        ("testSearchForBotmanMovie", testSearchForBotmanMovie),
+        ("testSearchForBotmanMovieFacets", testSearchForBotmanMovieFacets)
     ]
 
 }
